app/overlay/client-sample/develop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client-sample
  name: client-sample
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: client-sample
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 200m
          # envFrom:
          #   - secretRef:
