app/overlay/client-sample/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: dev.sherosupport.org
    http:
        paths:
        - backend:
            service: 
             name: web
             port: 
              number: 80
          pathType: ImplementationSpecific
